Add telegram name based authentication

--- a/chat/config/locales/services/services.ru.yml
+++ b/chat/config/locales/services/services.ru.yml
@@ -3,3 +3,5 @@ ru:
     rider_data:
       find_game_service:
         not_found: 'Игра не найдена'
+      authenticate_service:
+        unauthorized: 'Нет доступа'
