--- a/chat/config/locales/services/services.ru.yml
+++ b/chat/config/locales/services/services.ru.yml
@@ -1,5 +1,8 @@
 ru:
   services:
+    command_service:
+      games:
+        not_found: 'Игорь нет'
     rider_data:
       find_game_service:
         not_found: 'Игра не найдена'
