--- a/chat/config/locales/services/services.ru.yml
+++ b/chat/config/locales/services/services.ru.yml
@@ -3,7 +3,14 @@ ru:
     command_service:
       games:
         not_found: 'Игорь нет'
+      hunter_activate:
+        success: "%{name} активирован"
+        not_found: "Охотника с именем %{name} не существует"
+        failure: 'Что-то пошло не так'
     rider_data:
+      hunters:
+        activate_hunter_service:
+          failure: 'Что-то пошло не так'
       find_game_service:
         not_found: 'Игра не найдена'
       relevant_games_service:
