Migrate hunter credentials command

--- a/chat/config/locales/services/services.ru.yml
+++ b/chat/config/locales/services/services.ru.yml
@@ -7,6 +7,9 @@ ru:
         success: "%{name} активирован"
         not_found: "Охотника с именем %{name} не существует"
         failure: 'Что-то пошло не так'
+      hunter_credentials:
+        success: "%{name} credentials: %{email} %{password}"
+        not_found: "Охотника с именем %{name} не существует"
     rider_data:
       hunters:
         activate_hunter_service:
