--- a/data/config/locales/services/services.ru.yml
+++ b/data/config/locales/services/services.ru.yml
@@ -16,3 +16,5 @@ ru:
       activate_hunter_service:
         not_found: 'Охотник с таким именем не найден'
         failure: 'Что-то пошло не так'
+      get_hunter_service:
+        not_found: 'Охотник с таким именем не найден'
