--- a/data/config/locales/services/services.ru.yml
+++ b/data/config/locales/services/services.ru.yml
@@ -16,5 +16,8 @@ ru:
       activate_hunter_service:
         not_found: 'Охотник с таким именем не найден'
         failure: 'Что-то пошло не так'
+      deactivate_hunter_service:
+        not_found: 'Охотник с таким именем не найден'
+        failure: 'Что-то пошло не так'
       get_hunter_service:
         not_found: 'Охотник с таким именем не найден'
