Migrate hunter_gear_status command

--- a/chat/config/locales/services/services.ru.yml
+++ b/chat/config/locales/services/services.ru.yml
@@ -14,11 +14,16 @@ ru:
       hunter_credentials:
         success: "%{name} credentials: %{email} %{password}"
         not_found: "Охотника с именем %{name} не существует"
+      hunter_gear_status:
+        success: "Охотник %{name} готов к работе"
+        failure: "Охотник %{name} не готов к работе - отсутствует токен"
     rider_data:
       hunters:
         activate_hunter_service:
           failure: 'Что-то пошло не так'
         deactivate_hunter_service:
+          failure: 'Что-то пошло не так'
+        hunter_gear_status_service:
           failure: 'Что-то пошло не так'
       find_game_service:
         not_found: 'Игра не найдена'
