--- a/data/config/locales/services/services.ru.yml
+++ b/data/config/locales/services/services.ru.yml
@@ -21,3 +21,6 @@ ru:
         failure: 'Что-то пошло не так'
       get_hunter_service:
         not_found: 'Охотник с таким именем не найден'
+      get_hunter_gear_status_service:
+        not_found: 'Охотник с таким именем не найден'
+        failure: 'Охотник с таким именем не готов к работе - отсутствует токен'
