--- a/chat/config/locales/services/services.ru.yml
+++ b/chat/config/locales/services/services.ru.yml
@@ -19,6 +19,9 @@ ru:
         failure: "Охотник %{name} не готов к работе - отсутствует токен"
       hunter_stats:
         failure: 'Что-то пошло не так'
+      hunter_gear_up:
+        success: "%{name} locked & load"
+        failure: "%{name} не смог аутентифицроваться"
     rider_data:
       hunters:
         activate_hunter_service:
@@ -29,6 +32,8 @@ ru:
           failure: 'Что-то пошло не так'
         get_hunters_service:
           failure: 'Что-то пошло не так'
+        gear_up_service:
+          failure: "%{name} не смог аутентифицроваться"
       find_game_service:
         not_found: 'Игра не найдена'
       relevant_games_service:
