--- a/config/locales/services/services.ru.yml
+++ b/config/locales/services/services.ru.yml
@@ -39,6 +39,8 @@ ru:
         success: "Теперь трофеи игрока %{name} больше не отслеживаются"
       player_watch_on:
         success: "Теперь трофеи игрока %{name} отслеживаются"
+      player_befriend_all:
+        success: 'Всем пользователям, которых нет в друзьях бота, отправлены приглашения'
       top:
         header: 'Топ трофеев:'
       top_rare:
