--- a/config/locales/services/services.ru.yml
+++ b/config/locales/services/services.ru.yml
@@ -39,6 +39,8 @@ ru:
         success: "Теперь трофеи игрока %{name} больше не отслеживаются"
       player_watch_on:
         success: "Теперь трофеи игрока %{name} отслеживаются"
+      player_befriend_all:
+        success: 'Всем пользователям, которых нет в друзьях бота, отправлены приглашения'
       top:
         header: 'Топ трофеев:'
       top_rare:
@@ -103,7 +105,14 @@ ru:
         failure: "Охотник %{name} не смог пройти аутентификацию"
     psn:
       initial_authentication_service:
-        grant_code_failure: 'Не удалось получить grant_code'
+        auth_code_failure: 'Не удалось получить authorization_code'
         refresh_token_failure: 'Не удалось получить refresh_token'
       update_access_token_service:
         failure: 'Не удалось получить access_token'
+    profile:
+      delete_friend_service:
+        failure: 'Не удалось удалить пользователя из друзей'
+      update_user_ids_service:
+        failure: 'Обновление пользователей прошло частично неудачно'
+      friend_request_service:
+        failure: 'Не удалось отправить запрос на добавление пользователя в друзья'
