--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,6 @@
 ru:
   hello: 'Привет мир!'
+  exceptions:
+    refresh_token_error: "Истек срок действия refresh token'a для trophy hunter'a '%{hunter_name}'"
   chat:
     unauthorized: 'У вас нет прав для работы с ботом. Обратитесь к админам чата.'
